--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.22.2",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
     "recharts": "^2.1.6",
